Added edge direction to the nodes' To.

--- a/iExcelNetwork/Resources/VisJsNetworkTemplate.html
+++ b/iExcelNetwork/Resources/VisJsNetworkTemplate.html
@@ -34,6 +34,9 @@
                 shape: "dot",
                 size: 16,
             },
+            edges: {
+                arrows: 'to',
+            },
             layout: {
                 randomSeed: 34,
             },
