Direction of edges is possible to change setting Network Properties. 1. Added combobox to Network Properties form. 2. Created class EdgeProperty and added to Network Properties class. 3. Combo box is populated from dictionary of EdgeProperty class. 4. EdgeProperty class' field SelectedDirection default value is direction to To Nodes. on selecting values from combo box, this value is changed.

--- a/iExcelNetwork/Resources/VisJsNetworkTemplate.html
+++ b/iExcelNetwork/Resources/VisJsNetworkTemplate.html
@@ -28,14 +28,14 @@
         var container = document.getElementById('networkContainer');
         var data = { nodes: nodes, edges: edges };
 
-        var options = {
+    var options = {
 
-            nodes: {
-                shape: "dot",
-                size: 16,
-            },
-            edges: {
-                arrows: 'to',
+        nodes: {
+            shape: "dot",
+            size: 16,
+        },
+        edges: {
+            arrows: "selectedEdgesDirection",
             },
             layout: {
                 randomSeed: 34,
