Network displays edges labels. As default value of edges count is empty string, there for edges labels are not seen. 1. Edges model Count field changed to string. 2. Created method and field to get links count.  Now returns default value of FromToRange model as an empty string. 3. Edge model is populated with count values. 4.Modified VisJsNetwork template to show labels of edges.

--- a/iExcelNetwork/Resources/VisJsNetworkTemplate.html
+++ b/iExcelNetwork/Resources/VisJsNetworkTemplate.html
@@ -36,7 +36,12 @@
         },
         edges: {
             arrows: "selectedEdgesDirection",
+            font: {
+                color: '#343434',
+                align: 'top',
+                size: 14
             },
+        },
             layout: {
                 randomSeed: 34,
             },
