--- a/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
+++ b/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
@@ -2,14 +2,17 @@
 <html>
 <head>
     <title>Vis.js Network</title>
-    <script type='text/javascript'>
-        {{VisJsScript}}
-    </script>
+    <!-- Inline the Font Awesome CSS (loaded from an embedded resource) -->
+    <style>{{FontAwesomeCss}}</style>
+    <!-- Load Vis Network Library -->
+    <script type='text/javascript'>{{VisJsScript}}</script>
     <style type='text/css'>
-        html, body {height: 100%;
+        html, body {
+            height: 100%;
             margin: 0;
             overflow: hidden; /* Prevent scrollbars */
         }
+
         #networkContainer {
             width: 100%;
             height: 100%;
