--- a/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
+++ b/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
@@ -6,6 +6,7 @@
     <style>{{FontAwesomeCss}}</style>
     <!-- Load Vis Network Library -->
     <script type='text/javascript'>{{VisJsScript}}</script>
+    <style type='text/css'>{{VisJsCss}}</style>
     <style type='text/css'>
         html, body {
             height: 100%;
