--- a/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
+++ b/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
@@ -39,6 +39,7 @@
             size: 16,
         },
         edges: {
+            scaling: { min: 1, max: 1 },
             arrows: "selectedEdgesDirection",
             font: {
                 color: '#343434',
