Links pop/up Title is disabled if NetworkData is not using Title.

--- a/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
+++ b/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
@@ -14,6 +14,8 @@
             overflow: hidden; /* Prevent scrollbars */
         }
 
+        .vis-tooltip { display: none !important; }
+
         #networkContainer {
             width: 100%;
             height: 100%;
