Removed unused Network direction property from Template.

--- a/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
+++ b/VisjsNetworkLibrary/Resources/VisJsNetworkTemplate.html
@@ -42,7 +42,7 @@
         },
         edges: {
             scaling: { min: 1, max: 1 },
-            arrows: "selectedEdgesDirection",
+            arrows: "to",
             font: {
                 color: '#343434',
                 align: 'top',
